--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   flutter_bloc: ^8.1.2
   internet_connection_checker: ^1.0.0+1
   envied: ^0.3.0
+  equatable: ^2.0.5
 
 dev_dependencies:
   flutter_test:
