--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   internet_connection_checker: ^1.0.0+1
   envied: ^0.3.0+3
   equatable: ^2.0.5
+  intl: ^0.18.1
 
 dev_dependencies:
   flutter_test:
