--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   envied: ^0.3.0+3
   equatable: ^2.0.5
   intl: ^0.18.1
+  circle_flags: ^1.0.4
 
 dev_dependencies:
   flutter_test:
