--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -4,6 +4,10 @@
         android:label="flight_tracker_app"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
+        <meta-data 
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyDw_53hsgSwrInwL3PY236vCUsf75tV1Gs" />
+
         <activity
             android:name=".MainActivity"
             android:exported="true"
