--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   equatable: ^2.0.5
   intl: ^0.18.1
   circle_flags: ^1.0.4
+  google_maps_flutter: ^2.2.6
 
 dev_dependencies:
   flutter_test:
