--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -6,7 +6,7 @@
         android:icon="@mipmap/ic_launcher">
         <meta-data 
             android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyDw_53hsgSwrInwL3PY236vCUsf75tV1Gs" />
+            android:value="${GMP_KEY}" />
 
         <activity
             android:name=".MainActivity"
