--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -47,5 +47,7 @@
 	<true/>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
+    <key>googleMapsApiKey</key>
+    <string>$(GOOGLE_MAPS_API_KEY)</string>
 </dict>
 </plist>
